[package]
name = "fm_synth"
version = "0.1.0"
authors = ["JoshuaBatty <joshpbatty@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou_audio = { git = "https://github.com/nannou-org/nannou", branch = "master" }
nannou = "0.15"
dasp = { version = "0.11", features = ["envelope", "envelope-peak", "peak", "signal", "interpolate", "interpolate-linear"] }
ringbuf = "0.2.2"
musical_keyboard = "0.6.0"